--- a/index.html
+++ b/index.html
@@ -15,11 +15,18 @@
 			RosevilleRunners.com
 		</TITLE>
 	</HEADER>
-	<BODY bgcolor =#FFFFFF text=black>
+	<BODY bgcolor =b  text=black>
 		
 		<CENTER>
 			<img src= "https://www.rjuhsd.us//cms/lib/CA01001478/Centricity/Domain/200/RHSPaw.jpg"
-			<P><H1><B>Welcome to RosevilleRunners!<B><H1></P>
+			
+		
 		</CENTER>
+		<p style= "padding: 10px; color: black; background-color: gray; #eeeeee; border: #dddddd 2px solid"> 
+		Welcome to Roseville Runners! <br>
+		
+		Here is a link to the Roseville High School Athletic.net page, where you can find meet information, race times and more!
+		<a href="https://www.athletic.net/TrackAndField/School.aspx?SchoolID=822">Athletic.net</a>
+		</p>
 	</BODY>
 </HTML>
