--- a/index.html
+++ b/index.html
@@ -1,24 +1,39 @@
 <!doctype html>
 <html>
 	<head>
-		<title>RosevilleRunners</title>
+		<title>Roseville Runners</title>
 		<link href="style.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body>
-		<h1>
-			<strong>Roseville Runners</strong>
-		</h1>
-		<center><img src="https://www.rjuhsd.us//cms/lib/CA01001478/Centricity/Domain/200/RHSPaw.jpg"></center><br>
 		
-		<p>
-			Here is a link to the Roseville High School Athletic.net page, 	where you can find meet information, race times and more!<br>
-			<a href="https://www.athletic.net/TrackAndField/School.aspx?SchoolID=822">athletic.net</a>
-			<a href="page2.html">Page 2</a>
-		</p>
-		<div class="row">
-			<div class="col">col1</div>
-			<div class="col">col2</div>
-			<div class="col">col3</div>
-		</div>
+				<nav>
+					<div class="topnav">
+						<a class="active" href="#home">Home</a>
+						<a href="teamData.html">Team Data</a>
+						<a href="myData.html">My Data</a>
+						<a href="#Sign In">Sign In</a>
+					</div>
+				</nav>
+
+				<h1 class="mainTitle">
+					<strong>Roseville Runners</strong>
+				</h1>
+		
+		<section>
+			Roseville Runners is an interactive record sheet for:
+				<ul style="margin-left: 40px">
+					<li> Workouts </li>
+					<li>Events</li>
+					<li>Fitness information</li>
+					<li>Mileage</li>
+				</ul>
+			Miles are also added to the overall team total! Sign in to get started.<br>	<br>
+				Here is a link to the Roseville High School Athletic.net page, 	where you can find meet information, race times and more!<br>
+				<a href="https://www.athletic.net/TrackAndField/	School.aspx?SchoolID=822">athletic.net</a>
+		</section>
+		<footer>
+			<center>Roseville High School, Roseville California</center>
+		</footer>
 	</body>
+	
 </html>
